--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,34 @@
+input {
+    width: 100%;
+}
 
-/* 
+li {
+    display: flex;
+    text-align: start;
+    border: 1px solid grey;
+    list-style: none;
+    justify-content: space-between;
+    padding: 5px;
+}
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
+.icon {
+    display: none
+}
 
-*/
+li:hover .icon {
+    display: block
+}
+
+ul {
+    padding: 0;
+    box-shadow: 2px 2px 10px black;
+}
+
+i {
+    color: red
+}
+
+.itemLeft {
+    font-size: x-small;
+    color: grey;
+}
